<resources>
    <string name="app_name">Firebase Login</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="logout">Logout</string>
    <string name="welcome_you_are_logged_in">Welcome! You are logged in</string>
    <string name="enter_the_email">Enter the email</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="login">LOGIN</string>
    <string name="not_registered_sign_up_here">Not registered? Sign Up here</string>
</resources>