<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/authenticate"/>


    <EditText
        android:id="@+id/editText"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/enter_the_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="290dp"
        android:ems="10"
        android:hint="@string/enter_the_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="379dp"
        android:layout_height="48dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="510dp"
        android:text="Already have an account ? Login !"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="410dp"
        android:text="@string/sign_up"
        android:textSize="30dp" />

</RelativeLayout>